--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@ _site
 .DS_store
 .ruby-version
 .tweet-cache
+.project
+.settings/
+public/
 Gemfile.lock
 assets/libs/
 node_modules/
 vendor
-.idea
-.venv
