Removed arXiv from the list of socials.

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -6,7 +6,7 @@
 #  organization: # your organization as appears in the subdomain
 #  username: # your username
 # acm_id: # your dl.acm.org/profile/id
-arxiv_id: christoph.minz # your arXiv author ID
+# arxiv_id: christoph.minz # your arXiv author ID
 # blogger_url: # your blogger URL
 # bluesky_url: # your bluesky URL
 # cv_pdf: # path to your CV PDF file
