--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -27,7 +27,7 @@ inspirehep_id: 1414160 # Inspire HEP author ID
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
 # linkedin_username: # your LinkedIn user name
-# mastodon_username: # your mastodon instance+username in the format instance.tld/@username
+mastodon_username: mastodon.social/@cminz # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 orcid_id: 0000-0002-5429-5997 # your ORCID ID
 # osf_id: # your OSF ID
