--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -26,7 +26,7 @@ inspirehep_id: 1414160 # Inspire HEP author ID
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-# linkedin_username: # your LinkedIn user name
+linkedin_username: christoph-minz-0b016591 # your LinkedIn user name
 mastodon_username: mastodon.social/@cminz # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 orcid_id: 0000-0002-5429-5997 # your ORCID ID
@@ -51,7 +51,7 @@ research_gate_profile: Christoph-Minz # your profile on ResearchGate
 # work_url: # work page URL
 # x_username: # your X handle
 youtube_id: c-minz # your youtube channel id (youtube.com/@<youtube_id>)
-# zotero_username: # your zotero username
+zotero_username: c-minz # your zotero username
 # custom_social: # can be any name here other than the ones already defined above
 #   logo: # URL to logo, can be png, svg, jpg
 #   title: Custom Social
