Remove Zotero from socials.

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -51,7 +51,7 @@ research_gate_profile: Christoph-Minz # your profile on ResearchGate
 # work_url: # work page URL
 # x_username: # your X handle
 youtube_id: c-minz # your youtube channel id (youtube.com/@<youtube_id>)
-zotero_username: c-minz # your zotero username
+# zotero_username: c-minz # your zotero username
 # custom_social: # can be any name here other than the ones already defined above
 #   logo: # URL to logo, can be png, svg, jpg
 #   title: Custom Social
